[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Attack/SpearThrower.gd" type="Script" id=1]

[node name="SpearThrower" type="Node2D"]
script = ExtResource( 1 )

[node name="ThrowTimer" type="Timer" parent="."]

[node name="ChargeTimer" type="Timer" parent="."]

[connection signal="timeout" from="ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
